src/test/ui/impl-trait/auto-trait-leak.stderr
error[E0391]: cycle detected when processing `cycle1`
  --> $DIR/auto-trait-leak.rs:24:1
   |
LL | fn cycle1() -> impl Clone {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires evaluating trait selection obligation `impl std::clone::Clone: std::marker::Send`...
note: ...which requires processing `cycle2::{{impl-Trait}}`...
  --> $DIR/auto-trait-leak.rs:31:16
   |
LL | fn cycle2() -> impl Clone {
   |                ^^^^^^^^^^
note: ...which requires processing `cycle2`...
  --> $DIR/auto-trait-leak.rs:31:1
   |
LL | fn cycle2() -> impl Clone {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires evaluating trait selection obligation `impl std::clone::Clone: std::marker::Send`...
note: ...which requires processing `cycle1::{{impl-Trait}}`...
  --> $DIR/auto-trait-leak.rs:24:16
   |
LL | fn cycle1() -> impl Clone {
   |                ^^^^^^^^^^
   = note: ...which again requires processing `cycle1`, completing the cycle
note: cycle used when type-checking all item bodies

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
